2007-07-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* *: Port to clutter-0.3 API. The actual changes are too many
	to be listed here.

2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs: Allow overriding the ClutterActor::paint()
	vfunc in order to draw actor subclasses using native GL calls.

2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Fix inclusion of the autogenerated Keysyms
	module.

	* examples/hello.pl: Test key symbols.

2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Post-release bump to VERSION 0.231.

	* MANIFEST:
	* tools/genkeysyms.pl: Use Gtk2 script to autogenerate the
	Clutter::Keysyms module containing the symbolic names for
	the key symbols from the installed C header file.

	* Makefile.PL: Add keysyms generation when building.

2007-04-25  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Bump to VERSION 0.230, support latest stable
	release in 0.2.

	(import): Support ':init' as well as '-init' and 'init'
	argument to initialise Clutter when importing the module.

	(square): Add pure-Perl square waveform generator function.

	(pod:SYNOPSIS): Update the example code.

	* xs/ClutterTypes.xs: Make Clutter::Color->parse() a
	valid class method; add support for accessing the members
	of Clutter::Knot.

	* xs/ClutterGroup.xs: Extend the stack beforehand with the
	size of the list returned by clutter_group_get_children(),
	instead of using XPUSHs; bind clutter_group_remove_all().

	* xs/ClutterActor.xs: Allow overriding the
	ClutterActor::request_coords() and ClutterActor::allocate_coords()
	vfuncs from Perl, and document how to do it.

	* examples/behaviour.pl: Test ':init' as initialisation
	pragma.

	* examples/hello.pl: Add a simple hello world using the
	same code of the SYNOPSIS.

	* examples/*.pl: Add copyright and license terms for the
	code in the examples.

2007-01-18  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.PL: Depend on clutter-0.2.
