@@ -1,5 +1,9 @@
 2007-07-25  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* examples/boxes.pl: Add small test case for the boxes.
+
+2007-07-25  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* *: Port to clutter-0.3 API. The actual changes are too many
 	to be listed here.
 
